Fix path to key for cf-deployment
[#155570283]

Signed-off-by: Peter Stone <pstone@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -129,7 +129,7 @@ resources:
   source:
     uri: git@github.com:cloudfoundry/cf-deployment
     branch: develop
-    private_key: {{loggregator-key}}
+    private_key: {{cf-loggregator-oauth-bot-key}}
 
 - name: consul-release
   type: bosh-io-release
