Add CI_SKIP to commit task and cf-deployment ops file update
[#155570283]

Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -1933,6 +1933,7 @@ jobs:
       committed-repo: committed-cf-deployment
     params:
       COMMIT_MESSAGE: "Update experimental use-log-cache ops-file"
+      CI_SKIP: false
   - put: cf-deployment-develop
     params:
       repository: committed-cf-deployment
