--- a/tasks/commit/task.yml
+++ b/tasks/commit/task.yml
@@ -22,3 +22,7 @@ params:
   # - Required.
   # - The commit message.
   COMMIT_MESSAGE:
+
+  # - Optional
+  # - Append CI skip to commit message
+  CI_SKIP: true
