--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -206,7 +206,7 @@ resources:
 - name: log-cache-release-develop
   type: git
   source:
-    uri: git@github.com:cloudfoundry-incubator/log-cache-release
+    uri: git@github.com:cloudfoundry/log-cache-release
     branch: develop
     private_key: {{cf-loggregator-oauth-bot-key}}
 
@@ -228,7 +228,7 @@ resources:
 - name: log-cache-cli
   type: git
   source:
-    uri: git@github.com:cloudfoundry-incubator/log-cache-cli
+    uri: git@github.com:cloudfoundry/log-cache-cli
     private_key: {{cf-loggregator-oauth-bot-key}}
     branch: master
 
@@ -244,7 +244,7 @@ resources:
 - name: log-cache-cli-github-release-drafts
   type: github-release
   source:
-    user: cloudfoundry-incubator
+    user: cloudfoundry
     repository: log-cache-cli
     access_token: {{access-token}}
     drafts: true
@@ -270,7 +270,6 @@ resources:
     repository: noisy-neighbor-nozzle
     access_token: {{access-token}}
     drafts: true
-
 
 - name: logging-acceptance-tests-release
   type: git
@@ -1172,9 +1171,14 @@ jobs:
             #!/bin/bash
             set -ex
 
+
             # establish version/tag strings
             semver=$(cat log-cache-cli-version/version)
             cp log-cache-cli-version/version version
+
+            # build version to inject into build with ldflags
+            IFS="." read -r -a version_parts <<< $semver
+            version="{\"Major\":${version_parts[0]},\"Minor\":${version_parts[1]},\"Build\":${version_parts[2]}}"
 
             # write out github release files
             echo "log cache cli $semver" > github-release/name
@@ -1194,9 +1198,9 @@ jobs:
 
             mkdir github-release/builds
             pushd $GOPATH/src/code.cloudfoundry.org/log-cache-cli/
-              GOOS=linux go build -o $WORKSPACE/github-release/builds/log-cache-cli-plugin-linux
-              GOOS=darwin go build -o $WORKSPACE/github-release/builds/log-cache-cli-plugin-darwin
-              GOOS=windows go build -o $WORKSPACE/github-release/builds/log-cache-cli-plugin-windows
+              GOOS=linux go build -ldflags "-X main.version=$version" -o $WORKSPACE/github-release/builds/log-cache-cli-plugin-linux
+              GOOS=darwin go build -ldflags "-X main.version=$version" -o $WORKSPACE/github-release/builds/log-cache-cli-plugin-darwin
+              GOOS=windows go build -ldflags "-X main.version=$version" -o $WORKSPACE/github-release/builds/log-cache-cli-plugin-windows
             popd
 
   - put: log-cache-cli
