Revert "Upload release uses loggregator/base image"
This reverts commit b6c481f7258797664cd86218f58375c79abe0297.

--- a/tasks/upload-release/task.yml
+++ b/tasks/upload-release/task.yml
@@ -7,7 +7,7 @@ caches:
 image_resource:
   type: docker-image
   source:
-    repository: loggregator/base
+    repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
 
 inputs:
 - name: loggregator-ci # - This repo
