Scale up the number of log-cache nodes on playground
Signed-off-by: Peter Stone <pstone@pivotal.io>

--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -259,6 +259,9 @@ jobs:
           - type: replace
             path: /instance_groups/name=doppler/instances
             value: 2
+          - type: replace
+            path: /instance_groups/name=log-cache/instances
+            value: 6
           EOT
   - task: cf-deploy
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
@@ -271,8 +274,8 @@ jobs:
         scale-to-one-az.yml
         diego.yml
         use-compiled-releases.yml
-        on-the-fly.yml
         add-log-cache.yml
+        on-the-fly.yml
         use-bosh-dns.yml
         use-bosh-dns-for-containers.yml
         use-loggregator-agent.yml
