Add task to run cats with useLogCache set to true
[#156049726]

Signed-off-by: Mark Alston <malston@pivotal.io>

--- a/pipelines/containers.yml
+++ b/pipelines/containers.yml
@@ -7,6 +7,21 @@ resources:
     username: {{docker-hub-username}}
     password: {{docker-hub-password}}
 
+- name: cf-deployment-concourse-tasks-image
+  type: docker-image
+  source:
+    repository: loggregator/cf-deployment-concourse-tasks
+    username: {{docker-hub-username}}
+    password: {{docker-hub-password}}
+
+- name: cf-deployment-concourse-tasks
+  type: git
+  source:
+    uri: https://github.com/loggregator/cf-deployment-concourse-tasks
+    branch: master
+    paths:
+    - dockerfiles/cf-deployment-concourse-tasks
+
 - name: base-image-dockerfile
   type: git
   source:
@@ -95,6 +110,16 @@ jobs:
     - put: bosh10-image
       params:
         build: bosh10-image-dockerfile/docker-images/bosh10
+        tag_as_latest: true
+        cache_tag: latest
+
+- name: cf-deployment-concourse-tasks
+  plan:
+    - get: cf-deployment-concourse-tasks
+      trigger: true
+    - put: cf-deployment-concourse-tasks-image
+      params:
+        build: cf-deployment-concourse-tasks/dockerfiles/cf-deployment-concourse-tasks
         tag_as_latest: true
         cache_tag: latest
 
