--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -151,12 +151,6 @@ resources:
     uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks
     branch: v6.0
 
-- name: bosh-bootloader
-  type: git
-  source:
-    uri: https://github.com/loggregator/bosh-bootloader
-    branch: master
-
 - name: integration-config
   type: git
   source: *deployments_loggregator
@@ -388,7 +382,6 @@ jobs:
   plan:
   - aggregate:
     - get: cf-deployment-concourse-tasks
-    - get: bosh-bootloader
     - get: bbl-state
       resource: deployments-loggregator
     - get: ops-files
@@ -396,7 +389,7 @@ jobs:
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
     input_mapping:
-      bbl-config: bosh-bootloader
+      bbl-config: bbl-state
     params:
       BBL_GCP_SERVICE_ACCOUNT_KEY: gcp/coconut-bbl/service-account.key.json
       BBL_GCP_PROJECT_ID: cff-loggregator
@@ -409,7 +402,6 @@ jobs:
       BBL_ENV_NAME: coconut-bbl
       LB_DOMAIN: coconut.cf-app.com
       OPS_FILES: local-dns.yml
-      BBL_CONFIG_DIR: plan-patches/iso-segs-gcp
   - put: deployments-loggregator
     params:
       repository: updated-bbl-state
@@ -905,13 +897,10 @@ jobs:
           cp cf-deployment/operations/experimental/use-bosh-dns.yml ops-files/
           cp cf-deployment/operations/experimental/use-bosh-dns-for-containers.yml ops-files/
           cp cf-deployment/operations/use-compiled-releases.yml ops-files/
-          cp cf-deployment/operations/test/add-persistent-isolation-segment-router.yml ops-files/
-          cp cf-deployment/operations/test/add-persistent-isolation-segment-diego-cell.yml ops-files/
           cp bbl-state/gcp/coconut-bbl/ops-files/*.yml ops-files/
           cp log-cache-release/manifests/operations/deploy-in-cf-doppler-collocated.yml ops-files/add-log-cache.yml
           cp loggregator-agent-release/manifests/operations/cf-deployment-addon.yml ops-files/use-loggregator-agent.yml
           cp loggregator-agent-release/manifests/operations/cf-deployment-windows-addon.yml ops-files/use-loggregator-agent-windows.yml
-
 
           cat <<EOT >> ops-files/on-the-fly.yml
           - type: replace
@@ -956,8 +945,6 @@ jobs:
         scale-to-one-az.yml
         diego.yml
         use-compiled-releases.yml
-        add-persistent-isolation-segment-router.yml
-        add-persistent-isolation-segment-diego-cell.yml
         on-the-fly.yml
         windows-cell.yml
         add-log-cache.yml
@@ -965,7 +952,6 @@ jobs:
         use-bosh-dns-for-containers.yml
         use-loggregator-agent.yml
         use-loggregator-agent-windows.yml
-
   - task: enable-feature-flags
     file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
     params:
